; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_browsers.c_check_http_crawler.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_browsers.c_check_http_crawler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"; +http\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"; http\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c" (+http\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c" (http\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c";++http\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @check_http_crawler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @check_http_crawler(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* null, i8** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i8* @strstr(i8* %5, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i8* %6, i8** %4, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i8*, i8** %4, align 8
  store i8* %9, i8** %2, align 8
  br label %35

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i8* @strstr(i8* %11, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  store i8* %12, i8** %4, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %10
  %15 = load i8*, i8** %4, align 8
  store i8* %15, i8** %2, align 8
  br label %35

16:                                               ; preds = %10
  %17 = load i8*, i8** %3, align 8
  %18 = call i8* @strstr(i8* %17, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  store i8* %18, i8** %4, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = load i8*, i8** %4, align 8
  store i8* %21, i8** %2, align 8
  br label %35

22:                                               ; preds = %16
  %23 = load i8*, i8** %3, align 8
  %24 = call i8* @strstr(i8* %23, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  store i8* %24, i8** %4, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %26, label %28

26:                                               ; preds = %22
  %27 = load i8*, i8** %4, align 8
  store i8* %27, i8** %2, align 8
  br label %35

28:                                               ; preds = %22
  %29 = load i8*, i8** %3, align 8
  %30 = call i8* @strstr(i8* %29, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0))
  store i8* %30, i8** %4, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %32, label %34

32:                                               ; preds = %28
  %33 = load i8*, i8** %4, align 8
  store i8* %33, i8** %2, align 8
  br label %35

34:                                               ; preds = %28
  store i8* null, i8** %2, align 8
  br label %35

35:                                               ; preds = %34, %32, %26, %20, %14, %8
  %36 = load i8*, i8** %2, align 8
  ret i8* %36
}

declare dso_local i8* @strstr(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
